--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <strong>Email-1:</strong><br>
         wan.512[at]osu.edu
         <hr>
-        <strong>Email-1:</strong><br>
+        <strong>Email-2:</strong><br>
         wanzhongwei666[at]gmail.com
       </div>
     </div>
@@ -216,6 +216,50 @@
           </td>
           </tr>
       </tbody></table>
+
+
+              <!-- Services -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:16px;width:100%;vertical-align:middle">
+              <h2>Services</h2>
+              <ul>
+                <li>
+                    <strong>Reviewer:</strong> ICML, ICLR, NeurIPS, ACL, EMNLP, NAACL,TKDE, TMLR
+                </li>
+              </ul>
+            </td>
+            </tr>
+        </tbody></table>
+
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:16px;width:100%;vertical-align:middle">
+              <h2>Talks</h2>
+             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tbody>
+                <tr>
+                    <td style="padding:10px;width:30%;vertical-align:middle">
+                        <img src='images/talks.png' width="80%">
+                    </td>
+                <td style="padding:10px;width:70%;vertical-align:middle">
+                    <a href="https://x.com/MedaiStanford/status/1768686034299064736/photo/1">
+                    <papertitle>
+                        Towards Fundamental Biomedical AI: Integrating Vision, Language, and Signals
+                    </papertitle>
+                    </a>
+                    <br>
+                    <strong>Zhongwei Wan, Chen Liu</strong>, 2024.3
+                  <br>
+                </td>
+                </tr>
+            </tbody>
+        </table>
+              </ul>
+            </td>
+            </tr>
+        </tbody></table>
 
 
       <!-- Featured Publications -->
@@ -1381,28 +1425,11 @@
 
 
 
-        
-
-        <!-- Services -->
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:16px;width:100%;vertical-align:middle">
-              <h2>Services</h2>
-              <ul>
-                <li>
-                    <strong>Journal Reviewer:</strong> IEEE Transactions on Mobile Computing
-                </li>
-                <li>
-                    <strong>Conference Reviewer:</strong> EMNLP, CVPR, ACL
-                </li>
-              </ul>
-            </td>
-            </tr>
-        </tbody></table>
+      
 
 
         <!-- Teaching Experience -->
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:16px;width:100%;vertical-align:middle">
               <h2>Teaching</h2>
@@ -1420,7 +1447,7 @@
               </ul>
             </td>
             </tr>
-        </tbody></table>
+        </tbody></table> -->
 
         <!-- Contact -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -1428,7 +1455,7 @@
             <td style="padding:16px;width:100%;vertical-align:middle">
               <h2>Contact</h2>
                 <p>
-                    <strong>Email:</strong> huishen011227 [at] gmail [dot] com
+                    <strong>Email:</strong> wan.512 [at] osu [dot] edu
             </td>
             </tr>
         </tbody></table>
