Update personal homepage new 5

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="scrollable-list border p-3">
                       <ul>
                         <li>
-                          <strong>May 2025:</strong> Two papers have been accepted by NeurIPS 2025, please see <a href="https://srpo.pages.dev/">SRPO for MLLMs reasoning.</a>.
+                          <strong>May 2025:</strong> Two papers have been accepted by NeurIPS 2025, please see <a href="https://srpo.pages.dev/">SRPO for MLLMs reasoning</a>.
                         </li>
                         <li>
                           <strong>August 2025:</strong> Three papers have been accepted by EMNLP 2025.
@@ -138,7 +138,7 @@
                           <strong>Feb 2025:</strong> One papers have been accepted by ICML 2025.
                         </li>
                         <li>
-                          <strong>Feb 2025:</strong> Two papers have been accepted by ICLR 2025, please see <a href="https://github.com/AIoT-MLSys-Lab/D2O">D2O for optimizing Long-context LLMs.</a>.
+                          <strong>Feb 2025:</strong> Two papers have been accepted by ICLR 2025, please see <a href="https://github.com/AIoT-MLSys-Lab/D2O">D2O for optimizing Long-context LLMs</a>.
                         </li>
 
                         <li>
