--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                   <br>
                  Che Liu, Haozhe Wang, Jiazhen Pan, <strong>Zhongwei Wan</strong>, Yong Dai, Fangzhen Lin, Wenjia Bai, Daniel Rueckert, Rossella Arcucci
                   <br>
-                  <em>Under Review 2025</em>
+                  <strong style="color:#1e6fff;">NeurIPS 2025</strong>@GenAI4Health
                   <br>
                   <a href="https://cheliu-computation.github.io/AlphaM/">Code</a>
                   /
@@ -1063,7 +1063,7 @@
                     Xin Wang,
                     Mi Zhang
                     <br>
-                    <em><strong style="color:#1e6fff;">ECCV 2024</strong> @ Computational Aspects of Deep Learning</em> <strong><font color='#b70000'> (Best Paper Award🏆)</strong></font>
+                    <strong style="color:#1e6fff;">ECCV 2024</strong> @ Computational Aspects of Deep Learning <strong><font color='#b70000'> (Best Paper Award🏆)</strong></font>
                     <br>
                     <a href="https://github.com/AIoT-MLSys-Lab/Famba-V">Code</a>
                     /
