--- a/publications.html
+++ b/publications.html
@@ -191,6 +191,28 @@
                             </table>
 
 
+
+
+                               <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                                <tbody>
+                                    <tr>
+                                        <!-- <td style="padding:10px;width:30%;vertical-align:middle">
+                                            <img src='images/papers/phyx.png' width="80%">
+                                        </td> -->
+                                    <td style="padding:10px;width:70%;vertical-align:middle">
+                                        <strong>
+                                            <papertitle>
+                                                <strong style="color:#1e6fff;">NeurIPS 2025@GenAI4Health</strong>  Beyond Distillation: Pushing the Limits of Medical LLM Reasoning with Minimalist Rule-Based RL
+                                            </papertitle>
+                                        </strong>
+                                        <br>
+                                        Che Liu, Haozhe Wang, Jiazhen Pan, <strong>Zhongwei Wan</strong>, Yong Dai, Fangzhen Lin, Wenjia Bai, Daniel Rueckert, Rossella Arcucci
+                                    </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+
                                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                                 <tbody>
                                     <tr>
