--- a/misc/travel_map.html
+++ b/misc/travel_map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hui Shen's Travel Map</title>
+    <title>Zhongwei Wan's Travel Map</title>
 
     <link rel="icon" type="image/x-icon" href="../images/favicons/favicon.ico">
         
@@ -20,7 +20,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary header">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Cloud Driver 雲端司機</a>
+            <a class="navbar-brand" href="#">Bruce Wan</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -30,19 +30,19 @@
                     <a class="nav-link" href="../index.html">Home🧐</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../publications.html">Publications📕</a>
+                    <a class="nav-link" href="../publications.html">Publications</a>
                 </li>
                 <li class="nav-item">
-                  <a data-bs-toggle="offcanvas" href="#contact_me" role="button" class="nav-link">Contact Me🌻</a>
+                  <a data-bs-toggle="offcanvas" href="#contact_me" role="button" class="nav-link">Contact Me</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link active dropdown-toggle" aria-current="page" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    When I'm Not Doing Research🌊
+                   Free Time🌊
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./travel_map.html">Travel Map</a></li>
-                        <li><a class="dropdown-item" href="./music.html">Music</a></li>
-                        <li><a class="dropdown-item" href="./transfer_guide.html">Transfer Guide</a></li>
+                        <!-- <li><a class="dropdown-item" href="./music.html">Music</a></li>
+                        <li><a class="dropdown-item" href="./transfer_guide.html">Transfer Guide</a></li> -->
                         <!-- <li><a class="dropdown-item" href="./game.html">Game</a></li> -->
                     </ul>
                 </li>
@@ -57,13 +57,13 @@
             <h5 class="offcanvas-title" id="offcanvasExampleLabel">Contact Me</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body">
+        <!-- <div class="offcanvas-body">
             <strong>WeChat:</strong><br>
             DiudiuandMoon
             <hr>
             <strong>RedNote/小红书:</strong><br>
             9428710724
-        </div>
+        </div> -->
     </div>
 
   <div class="container">
