--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@
               <tr>
                 <td style="padding:16px;width:100%;vertical-align:middle;text-align:center;">
                   <h2>Visit Statistic</h2>
-                  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=tw2_506UT1zXRgjtkp68qPMgFK-ObI3n7spI-i0b1Rg&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
+                  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=x-9zeX-ElWDnjvj-zQXL34Ey7dGvuSRgoqB0H5_VIHU&cl=ffffff&w=a"></script>
                 </td>
               </tr>
             </tbody>
