--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
                     <div class="scrollable-list border p-3">
                       <ul>
                         <li>
-                          <strong>May 2025:</strong> Two papers have been accepted by NeurIPS 2025, please see <a href="https://srpo.pages.dev/">SRPO for MLLMs reasoning</a>.
+                          <strong>Seq 2025:</strong> Our new RL reasoning method PTA-GRPO has been released, please see <a href="https://arxiv.org/abs/2510.01833">Plan then action for LLMs reasoning</a>.
+                        </li>
+                        <li>
+                          <strong>Seq 2025:</strong> Two papers have been accepted by NeurIPS 2025, please see <a href="https://srpo.pages.dev/">SRPO for MLLMs reasoning</a>.
                         </li>
                         <li>
                           <strong>August 2025:</strong> Three papers have been accepted by EMNLP 2025.
@@ -310,7 +313,7 @@
                         <img src='images/papers/PTA-GRPO.png' width="80%">
                     </td>
                 <td style="padding:10px;width:70%;vertical-align:middle">
-                    <a href="https://openreview.net/">
+                    <a href="https://arxiv.org/abs/2510.01833">
                     <papertitle>
                         Plan Then Action: High-level Planning Guidance Reinforcement Learning for LLM Reasoning
                     </papertitle>
@@ -325,7 +328,7 @@
                     <a href="https://arxiv.org/pdf/2502.06805">Paper</a> -->
                                       <a href="https://github.com/SUSTechBruce/PTA-GRPO">Code</a>
                   /
-                  <a href="https://arxiv.org/abs/xxxx.xxxxx">Paper</a>
+                  <a href="https://arxiv.org/abs/2510.01833">Paper</a>
                 </td>
                 </tr>
             </tbody>
